--- a/Web/index.html
+++ b/Web/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <meta name="author" content="Shawn Conrad, Michele Pratusevich, michele.pratusevich@gmail.com"/>
+    <meta name="author" content="Shawn Conrad, Michele Pratusevich, michele.pratusevich@gmail.com" />
     <title>Terminus</title>
     <!-- Scripts -->
-    <script type="text/javascript" src="./static/javascript/jquery-1.9.1.min.js" ></script>
+    <script type="text/javascript" src="./static/javascript/jquery-1.9.1.min.js"></script>
     <!--<script type="text/javascript" src="./static/javascript/jquery.terminal-0.5.min.js"></script> -->
     <!-- // <script type="text/javascript" src="./static/javascript/jquery.terminal-0.6.3.min.js"></script> -->
     <script type="text/javascript" src="./static/javascript/jquery.terminal-0.6.3.js"></script>
@@ -15,13 +16,17 @@
     <script type="text/javascript" src="./static/javascript/GameObjects.js"></script>
     <script type="text/javascript" src="./static/javascript/Level.js"></script>
     <script type="text/javascript" src="./static/javascript/GameState.js"></script>
-    <script type="text/javascript" src="./static/javascript/Game.js"></script> <!-- Execute last -->
+    <script type="text/javascript" src="./static/javascript/Game.js"></script>
+    <!-- Execute last -->
     <!-- CSS -->
-    <link href="./static/css/jquery.terminal.css" rel="stylesheet"/>
-    <link href="./static/css/terminus.css" rel="stylesheet"/>
-  </head>
+    <link href="./static/css/jquery.terminal.css" rel="stylesheet" />
+    <link href="./static/css/terminus.css" rel="stylesheet" />
+</head>
+
 <body>
-<div id="term"></div>
-<div id="pics"><img id="scene"></img></div>
+    <div id="term"></div>
+    <div id="pics"><img id="scene"></img>
+    </div>
 </body>
+
 </html>
