--- a/Web/index.html
+++ b/Web/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Shawn Conrad, Michele Pratusevich, michele.pratusevich@gmail.com" />
-    <title>Terminus</title>
+    <meta name="author" content="Piyush Acharya, Shaheer Ahmed, Aarnav Bhat" />
+    <title>The Monster Within</title>
     <!-- Scripts -->
     <script type="text/javascript" src="./static/javascript/jquery-1.9.1.min.js"></script>
     <!--<script type="text/javascript" src="./static/javascript/jquery.terminal-0.5.min.js"></script> -->
